# server/controller/shift/src/main/resources/openapi/documentation-shift.yaml
@@ -4,25 +4,6 @@ info:
   description: "API for managing staff shifts"
   version: "1.0.0"
 paths:
-  /shifts/distribute:
-    post:
-      description: ""
-      responses:
-        "200":
-          description: "OK"
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/BaseResponseDto_List<? extends MonthlyShiftDistributionDto>"
-        "500":
-          description: "Internal Server Error"
-          content:
-            '*/*':
-              schema:
-                type: "string"
-              examples:
-                Example#1:
-                  value: ""
   /shifts/employee/{id}:
     get:
       description: ""
@@ -106,11 +87,66 @@ paths:
               examples:
                 Example#1:
                   value: "No employees on shift"
+  /shifts/scheduling/generate:
+    post:
+      description: ""
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseDto_List<? extends MonthlyShiftDistributionDto>"
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+  /shifts/scheduling/publish:
+    post:
+      description: ""
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: "array"
+              items:
+                $ref: "#/components/schemas/MonthlyShiftDistributionDto"
+        required: true
+      responses:
+        "400":
+          description: "Bad Request"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Malformed body"
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: "Saved draft successfully"
+        "500":
+          description: "Internal Server Error"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
 components:
   schemas:
-    EmployeeDto:
-      type: "object"
-      properties: { }
     ShiftDto:
       type: "object"
       properties:
@@ -120,12 +156,16 @@ components:
         endTime:
           type: "string"
           format: "partial-time"
-        name:
+        type:
           type: "string"
+          enum:
+            - "GENERAL_DUTY"
+            - "KITCHEN_ASSISTANT"
+            - "KITCHEN_LEAD"
       required:
         - "startTime"
         - "endTime"
-        - "name"
+        - "type"
     ShiftDateDto:
       type: "object"
       properties:
@@ -137,44 +177,6 @@ components:
       required:
         - "shift"
         - "date"
-    MonthlyShiftDistributionDto:
-      type: "object"
-      properties:
-        employee:
-          $ref: "#/components/schemas/EmployeeDto"
-        sundaysOff:
-          type: "array"
-        shiftDate:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/ShiftDateDto"
-      required:
-        - "employee"
-        - "sundaysOff"
-        - "shiftDate"
-    BaseResponseDto:
-      type: "object"
-      properties:
-        message:
-          type: "string"
-        timestamp:
-          type: "string"
-          format: "date-time"
-      required:
-        - "message"
-        - "timestamp"
-    BaseResponseDto_List<? extends MonthlyShiftDistributionDto>:
-      type: "object"
-      properties:
-        message:
-          type: "string"
-        timestamp:
-          type: "string"
-          format: "date-time"
-        data:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/MonthlyShiftDistributionDto"
     EmployeeScheduleDto:
       type: "object"
       properties:
@@ -187,6 +189,17 @@ components:
       required:
         - "workingDays"
         - "daysOff"
+    BaseResponseDto:
+      type: "object"
+      properties:
+        message:
+          type: "string"
+        timestamp:
+          type: "string"
+          format: "date-time"
+      required:
+        - "message"
+        - "timestamp"
     BaseResponseDto_EmployeeScheduleDto:
       type: "object"
       properties:
@@ -197,6 +210,9 @@ components:
           format: "date-time"
         data:
           $ref: "#/components/schemas/EmployeeScheduleDto"
+    EmployeeDto:
+      type: "object"
+      properties: { }
     BaseResponseDto_List<? extends EmployeeDto>:
       type: "object"
       properties:
@@ -209,3 +225,33 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/EmployeeDto"
+    Get:
+      type: "object"
+      properties: { }
+    MonthlyShiftDistributionDto:
+      type: "object"
+      properties:
+        employee:
+          $ref: "#/components/schemas/Get"
+        sundaysOff:
+          type: "array"
+        shiftDate:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/ShiftDateDto"
+      required:
+        - "employee"
+        - "sundaysOff"
+        - "shiftDate"
+    BaseResponseDto_List<? extends MonthlyShiftDistributionDto>:
+      type: "object"
+      properties:
+        message:
+          type: "string"
+        timestamp:
+          type: "string"
+          format: "date-time"
+        data:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/MonthlyShiftDistributionDto"
